Fix white padding on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body {
     background-color: #0B132B;
     display: flex;
     align-items: center;
+    overflow: hidden;
 }
 
 /* Loader */
